# cppsim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  test_build.sh
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/bmm/workflows/4-implementation/code-review/: template_output.md  workflow.yaml
.bmad/bmm/workflows/4-implementation/dev-story/: output.md
.bmad/core/: config.yaml
.codemachine/: template.json
.codemachine/logs/: registry.db-shm  registry.db-wal
cmake/: Sanitizers.cmake
config/: default_config.json
docs/: CODE_REVIEW_REPORT.md  COMPREHENSIVE_CODE_REVIEW.md  code-review-1-1.md  code-review-10.md  code-review-2.md  code-review-3.md  code-review-4.md  code-review-5.md  code-review-6.md  code-review-7.md  code-review-8.md  code-review-9.md  epics.md  prd.md
docs/sprint-artifacts/: 1-1-cmake-project-structure-dependencies.md  1-2-project-directory-structure.md  1-3-coding-standards-style-enforcement.md  2-2-websocket-server-with-connection-management.md  2-3-handshake-protocol-versioning.md  sprint-status.yaml
docs/template-output/: dev-story-completion.md
scripts/: validate_clang_format.sh
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  protocol.cpp  protocol.hpp  protocol_validation.cpp  string_utils.hpp
src/server/: CMakeLists.txt  boost_wrapper.hpp  config.hpp  connection_manager.cpp  connection_manager.hpp  error_templates.hpp  logger.cpp  logger.hpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp  runtime_config.cpp  runtime_config.hpp  runtime_config_manager.cpp  runtime_config_manager.hpp  sanitize.hpp  session_metrics.hpp  websocket_server.cpp  websocket_server.hpp  websocket_session.cpp  websocket_session.hpp
tests/: CMakeLists.txt  test_utils.hpp
tests/integration/: handshake_test.cpp  websocket_server_test.cpp
tests/unit/: config_manager_test.cpp  enhanced_websocket_test.cpp  protocol_test.cpp
